now user can activate bluetooth by frontend
