# docs/openapi.json
@@ -61,6 +61,41 @@
         }
       }
     },
+    "/api/admin/bluetooth/enable": {
+      "post": {
+        "operationId": "admin.enable_bluetooth",
+        "tags": [
+          "common"
+        ],
+        "x-cameracontrol-feature": "common",
+        "x-flask-endpoint": "admin.enable_bluetooth",
+        "responses": {
+          "200": {
+            "description": "Respuesta correcta",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/StatusMessage"
+                }
+              }
+            }
+          },
+          "default": {
+            "$ref": "#/components/responses/Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ConfirmationRequest"
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/admin/update": {
       "post": {
         "operationId": "admin.trigger_update",
